// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should renders correctly 1`] = `
<table
  className="data zebra zebra-hover"
>
  <tbody>
    <ComponentsListRow
      component={
        {
          "key": "foo",
          "measures": [],
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
      isSelected={false}
      key="foo"
      metric={
        {
          "id": "2",
          "key": "new_bugs",
          "name": "New Bugs",
          "type": "INT",
        }
      }
      otherMetrics={[]}
      rootComponent={
        {
          "key": "foo",
          "measures": [],
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
      view="tree"
    />
  </tbody>
</table>
`;

exports[`should renders empty 1`] = `<EmptyResult />`;

exports[`should renders with multiple measures 1`] = `
<table
  className="data zebra zebra-hover"
>
  <thead>
    <tr>
      <th>
         
      </th>
      <th
        className="text-right"
      >
        <span
          className="small"
        >
          Coverage
        </span>
      </th>
      <th
        className="text-right"
        key="uncovered_lines"
      >
        <span
          className="small"
        >
          Lines
        </span>
      </th>
      <th
        className="text-right"
        key="uncovered_conditions"
      >
        <span
          className="small"
        >
          Conditions
        </span>
      </th>
    </tr>
  </thead>
  <tbody>
    <ComponentsListRow
      component={
        {
          "key": "foo",
          "measures": [],
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
      isSelected={false}
      key="foo"
      metric={
        {
          "id": "1",
          "key": "coverage",
          "name": "Coverage",
          "type": "PERCENT",
        }
      }
      otherMetrics={
        [
          {
            "id": "3",
            "key": "uncovered_lines",
            "name": "Lines",
            "type": "INT",
          },
          {
            "id": "4",
            "key": "uncovered_conditions",
            "name": "Conditions",
            "type": "INT",
          },
        ]
      }
      rootComponent={
        {
          "key": "foo",
          "measures": [],
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
      view="tree"
    />
  </tbody>
</table>
`;
